--- a/IcingaBusylightAgent/FormSettings.de-DE.resx
+++ b/IcingaBusylightAgent/FormSettings.de-DE.resx
@@ -169,6 +169,15 @@
   <data name="chkServices.Text" xml:space="preserve">
     <value>Dienste</value>
   </data>
+  <data name="lbl_soundfile.Size" type="System.Drawing.Size, System.Drawing">
+    <value>58, 13</value>
+  </data>
+  <data name="lbl_soundfile.Text" xml:space="preserve">
+    <value>Soundatei:</value>
+  </data>
+  <data name="btn_soundfile_set.Text" xml:space="preserve">
+    <value>Wählen</value>
+  </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Einstellungen</value>
   </data>
