--- a/IcingaBusylightAgent/FormSettings.de-DE.resx
+++ b/IcingaBusylightAgent/FormSettings.de-DE.resx
@@ -184,6 +184,21 @@
   <data name="ofd_sound.Filter" xml:space="preserve">
     <value>Sound-Dateien|*.wav</value>
   </data>
+  <data name="lbl_logmode.Size" type="System.Drawing.Size, System.Drawing">
+    <value>86, 13</value>
+  </data>
+  <data name="lbl_logmode.Text" xml:space="preserve">
+    <value>Protokoll-Modus:</value>
+  </data>
+  <data name="btn_default.Text" xml:space="preserve">
+    <value>Standard zurücksetzen</value>
+  </data>
+  <data name="lbl_loglevel.Size" type="System.Drawing.Size, System.Drawing">
+    <value>66, 13</value>
+  </data>
+  <data name="lbl_loglevel.Text" xml:space="preserve">
+    <value>Detail-Level:</value>
+  </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Einstellungen</value>
   </data>
