New settings dialog and automatic thread restart
Release 0.1.1.1:
- new tabbed settings dialog, that is not ugly as hell
- when changing Icinga2 settings, the data thread is restarted (see
issue #13)
- when changing sounds/sound volumes, the selected setting is inherited
- cleaned-up some crap code (deduplication, getHTMLPostResult(), etc.)

--- a/IcingaBusylightAgent/FormSettings.de-DE.resx
+++ b/IcingaBusylightAgent/FormSettings.de-DE.resx
@@ -199,6 +199,12 @@
   <data name="lbl_loglevel.Text" xml:space="preserve">
     <value>Detail-Level:</value>
   </data>
+  <data name="tabp_notification.Text" xml:space="preserve">
+    <value>Benachrichtigung</value>
+  </data>
+  <data name="tabp_other.Text" xml:space="preserve">
+    <value>Sonstiges</value>
+  </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Einstellungen</value>
   </data>
