--- a/IcingaBusylightAgent/Properties/Resources.resx
+++ b/IcingaBusylightAgent/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="icinga" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icinga.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="icinga_update" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icinga_update.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
