--- a/IcingaBusylightAgent/Strings.de-DE.resx
+++ b/IcingaBusylightAgent/Strings.de-DE.resx
@@ -169,6 +169,14 @@
     <value>Aktualisieren</value>
     <comment>ContextMnu TrayIcon, Update</comment>
   </data>
+  <data name="mnu_update_last" xml:space="preserve">
+    <value>letztes Update:</value>
+    <comment>ContextMnu TrayIcon, Last update</comment>
+  </data>
+  <data name="mnu_update_progress" xml:space="preserve">
+    <value>aktualisiere...</value>
+    <comment>ContextMnu TrayIcon, Update in progress</comment>
+  </data>
   <data name="msgbox_error" xml:space="preserve">
     <value>Fehler</value>
     <comment>MsgBox, Error</comment>
